--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link type="text/css" rel="stylesheet" href="css/style.css">
+  <title>To-Do List</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+
+  <div class="header">
+  <h1>Your To-Do List</h1>
+
+  <h3>No one is going to do it for you!</h3>
+  </div>
+
+  <form>
+  <input type="text" placeholder="What do you have to do?" class="userInput">
+  <button class="submit" type="submit">ADD</button>
+  </form>
+
+  <ul class="todoList">
+  	
+  </ul>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+  <!--Other script tags below this-->
+  <script src="js/app.js"></script>
 </body>
 </html>
